--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,9 +1,10 @@
-<div class="face-snap-card">
+<div class="face-snap-card" [ngClass]="{ snapped: buttonText === 'Oops, unSnap!' }">
     <h2>{{ faceSnap.title }}</h2>
     <p>Mis en ligne le {{ faceSnap.createdDate }}</p>
     <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
     <p>{{ faceSnap.description }}</p>
-    <p><button (click)="onSnap()">{{snapBoutonLabel}}</button>
-        {{ faceSnap.snaps }}
+    <p><button (click)="onSnap()">{{buttonText}}</button>
+        <span [ngStyle]="{ color: 'rgb(0, ' + faceSnap.snaps + ', 0)' }"> {{ faceSnap.snaps }}</span>
     </p>
+    <p *ngIf="faceSnap.location">Photo prise à la {{faceSnap.location}}</p>
 </div>
