--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-face-snap *ngFor="let myFaceSnap of faceSnaps" [faceSnap]="myFaceSnap" ></app-face-snap>
+<app-header></app-header>
+<app-face-snap-list></app-face-snap-list>
